--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <title>Dicee</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster" rel="stylesheet">
+    <script src="index.js" charset="utf-8"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@600&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <div class="container">
       <h1 id="title_">Refresh Me</h1>
+      
+      <h2 style="font-family: font-family: 'Inconsolata', monospace;
+      color: #ffe5b9" >Refresh the page to play again</h2>
 
       <div class="dice">
         <p>Player 1</p>
@@ -24,11 +30,10 @@
     </div>
 
 
-    <script src="index.js" charset="utf-8"></script>
+    
   </body>
 
   <footer>
-    <!-- www 🎲 App Brewery 🎲 com -->
     Created with ❤️ by Kshitij Anand
   </footer>
 </html>
